# voxlocal

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION.md  NOTICE.md  PATTERNS.md  PRODUCTION_READINESS_PROMPT.md  README.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
.ralph/: RALPH.md
.ralph/2026/06/08/: RALPH-20-11-27-547-iter-001.jsonl  RALPH-20-11-27-547-iter-002.jsonl  RALPH-20-11-27-547-iter-003.jsonl  RALPH-20-11-27-547-iter-004.jsonl  RALPH-20-11-27-547-iter-005.jsonl
clients/swift/: Package.swift  README.md
clients/swift/.build/arm64-apple-macosx/debug/index/db/v13/p13743--f238df/: lock.mdb
clients/swift/Sources/VoxLocalClient/: VoxLocalClient.swift
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.json
clients/typescript/src/: index.ts
docs/: README.md  next.config.mjs  package-lock.json  package.json  transport.md
docs/.github/workflows/: deploy-docs.yml
docs/.source/: index.ts
docs/app/: global.css  layout.tsx  page.tsx
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/content/docs/: index.mdx  installation.mdx  meta.json  quickstart.mdx
docs/content/docs/api/: errors.mdx  server.mdx  types.mdx  voxlocal.mdx
docs/content/docs/concepts/: audio.mdx  engines.mdx  streaming.mdx
docs/content/docs/examples/: basic-usage.mdx  batch-transcribe.mdx  fastapi-server.mdx  real-time-tts.mdx
docs/content/docs/guides/: custom-engine.mdx  playback.mdx  streaming.mdx  stt.mdx  tts.mdx  voice-agent.mdx
docs/lib/: source.ts
tests/: test_audio.py  test_benchmarks.py  test_config.py  test_download.py  test_errors.py  test_facade.py  test_integration.py  test_playback.py  test_production_readiness.py  test_properties.py  test_server.py  test_stream.py
tests/stt/: test_moonshine.py  test_sensevoice.py  test_whisper.py
tests/tts/: test_supertonic.py
voxlocal/: __init__.py  _audio.py  _config.py  _download.py  _errors.py  _metrics.py  _stream.py  _version.py  playback.py  server.py
voxlocal/stt/: __init__.py  _moonshine.py  _sensevoice.py  _sensevoice_frontend.py  _whisper.py
voxlocal/tts/: __init__.py  _supertonic.py
