[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxlocal"
version = "0.1.0"
description = "Local STT/TTS with zero setup"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "onnxruntime",
    "soundfile",
]

[project.optional-dependencies]
whisper = ["openai-whisper"]
moonshine = ["moonshine-voice"]
sensevoice = ["kaldi-native-fbank", "sentencepiece"]
tts = ["supertonic"]
all = [
    "openai-whisper",
    "moonshine-voice",
    "kaldi-native-fbank",
    "sentencepiece",
    "supertonic",
]
dev = ["pytest", "ruff"]
