[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "voxlocal"
dynamic = ["version"]
description = "Explicit, local speech-to-text and streaming text-to-speech"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "VoxLocal contributors" },
]
keywords = ["speech", "stt", "tts", "onnx", "local", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "numpy>=1.26,<3",
    "platformdirs>=4,<5",
    "soundfile>=0.12,<1",
]

[project.optional-dependencies]
tts = [
    "supertonic>=1.3.1,<2",
]
playback = [
    "sounddevice>=0.5,<1",
]
whisper = [
    "openai-whisper>=20250625",
]
moonshine = [
    "moonshine-voice>=0.0.62,<0.1",
]
sensevoice = [
    "huggingface-hub>=0.25,<2",
    "kaldi-native-fbank>=1.20",
    "onnxruntime>=1.18,<2",
    "scipy>=1.10,<2",
    "sentencepiece>=0.2,<1",
]
server = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
]
all = [
    "fastapi>=0.115,<1",
    "huggingface-hub>=0.25,<2",
    "kaldi-native-fbank>=1.20",
    "moonshine-voice>=0.0.62,<0.1",
    "onnxruntime>=1.18,<2",
    "openai-whisper>=20250625",
    "scipy>=1.10,<2",
    "sentencepiece>=0.2,<1",
    "sounddevice>=0.5,<1",
    "supertonic>=1.3.1,<2",
    "uvicorn>=0.30,<1",
]
dev = [
    "build>=1.2,<2",
    "fastapi>=0.115,<1",
    "pytest>=8,<10",
    "ruff>=0.11,<1",
    "uvicorn>=0.30,<1",
]

[project.scripts]
voxlocal-server = "voxlocal.server:main"

[tool.hatch.build.targets.wheel]
packages = ["voxlocal"]

[tool.hatch.version]
path = "voxlocal/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
